--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-select": "^5.8.0",
-    "react-toastify": "^9.1.3"
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
